--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "lint": "eslint . --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix"
     },
+    "gitHooks": {
+        "pre-commit": "npm run ts-check && npm run lint && npm run test"
+    },
     "nodemonConfig": {
         "ignore": [
             "**/*.test.ts",
