--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
         "lint": "eslint . --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix"
     },
-    "gitHooks": {
-        "pre-commit": "npm run ts-check && npm run lint && npm run test"
-    },
+   
     "nodemonConfig": {
         "ignore": [
             "**/*.test.ts",
@@ -30,6 +28,7 @@
         "ext": "ts, js"
     },
     "dependencies": {
+        "axios": "^1.8.4",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cors": "^2.8.5",
