--- a/ui/package.json
+++ b/ui/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
+    "tailwindcss": "^4.1.3",
     "wagmi": "^2.14.16"
   },
   "devDependencies": {
